5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1642_2728.log
== TEST (2019-04-15 14:10:21) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilômetros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	a = percuso / 8
	print(a)
else :
	a = percuso / 12
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a = percuso / 12
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:10:35) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	a = percuso / 8
	print(a)
else :
	a = percuso / 12
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a = percuso / 12
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:01) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	a = percurso / 8
	print(a)
else :
	a = percuso / 12
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a = percuso / 12
NameError: name 'percuso' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:06) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	a = percurso / 8
	print(a)
else :
	a = percurso / 12
	print(a)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:11:16) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	a = percurso / 8
	print(a)
else :
	a = percurso / 12
	print(a)
-- EXECUTION TIME:
0.113149
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:11:23) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	a = percurso / 8
	print(a)
else :
	a = percurso / 12
	print(a)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:11:54) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	consumo = percurso / 8
	print(consumo)
else :
	consumo = percurso / 12
	print(consumo)
-- EXECUTION TIME:
0.141996
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:13:09) 
-- CODE:
percurso = float(input("o percurso de uma viagem (em quilometros): "))
tipo = input("o tipo do carro (A ou B): ")

if tipo.upper() == "A": 
	consumo = percurso / 8
	print(round(consumo, 2))
else :
	consumo = percurso / 12
	print(round(consumo, 2))
-- EXECUTION TIME:
0.124048
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
